// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows small override 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Small"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#1f2c9b",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 14,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
            "fontFamily": "IBMPlexSans-Medium",
            "fontSize": 14,
            "fontWeight": "normal",
            "lineHeight": 21,
          },
        ]
      }
    >
      Small
    </Text>
  </View>
</View>
`;

exports[`changes color based on theme 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="onDefault"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#1f2c9b",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 72,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
            "fontFamily": "IBMPlexSans-Medium",
            "fontSize": 20,
            "fontWeight": "normal",
            "lineHeight": 40,
          },
        ]
      }
    >
      onDefault
    </Text>
  </View>
  <View
    accessibilityLabel="onCharcoal"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 72,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#4e4e4e",
            "fontFamily": "IBMPlexSans-Medium",
            "fontSize": 20,
            "fontWeight": "normal",
            "lineHeight": 40,
          },
        ]
      }
    >
      onCharcoal
    </Text>
  </View>
  <View
    accessibilityLabel="onViolet"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 72,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#1f2c9b",
            "fontFamily": "IBMPlexSans-Medium",
            "fontSize": 20,
            "fontWeight": "normal",
            "lineHeight": 40,
          },
        ]
      }
    >
      onViolet
    </Text>
  </View>
</View>
`;

exports[`renders a violet 72px button on default theme 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Default"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#1f2c9b",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 72,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
            "fontFamily": "IBMPlexSans-Medium",
            "fontSize": 20,
            "fontWeight": "normal",
            "lineHeight": 40,
          },
        ]
      }
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`renders an icon and space-between if supplied 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#1f2c9b",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 72,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
            "fontFamily": "IBMPlexSans-Medium",
            "fontSize": 20,
            "fontWeight": "normal",
            "lineHeight": 40,
          },
        ]
      }
    >
      Button
    </Text>
    <SvgXml
      style={
        Object {
          "marginRight": 8,
        }
      }
      xml="<g />"
    />
  </View>
</View>
`;

exports[`renders different color for secondary 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderColor": "#1f2c9b",
        "borderStyle": "solid",
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 72,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#1f2c9b",
            "fontFamily": "IBMPlexSans-Medium",
            "fontSize": 20,
            "fontWeight": "normal",
            "lineHeight": 40,
          },
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;
